Fix text not being wrapped in text component

--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -8,7 +8,6 @@ div[data-evergreen-toaster-container] > span {
 html,
 body {
   background: #ececec;
-  /* font-family: unset; */
 }
 
 .logo {
@@ -156,15 +155,6 @@ tr.newYear {
   box-shadow: 0px 0px 6px #bbb;
   margin-right: 30px;
   max-width: 100%;
-}
-.app-title {
-  font-size: 36px;
-}
-.app-subtitle {
-  padding-left: 14px;
-  font-size: 22px;
-  padding-top: 10px;
-  padding-bottom: 10px;
 }
 
 .ua-icons .mdi-icon {
